{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "09fed94e-a4c3-4bf9-808a-ec286c75a7ad",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "7fe79456-7d51-48c1-89a7-32b479d68ec3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "9c656782-c3bb-4572-a798-8d75ccaa6c25",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3e8acd7-07c8-480f-96e4-8efa6574e864",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mobile",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "767c9ccd-4821-4ed9-841e-c4053a1e1953",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mobile",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}